--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5891,7 +5891,6 @@ select:visited {
 
 .nio-dia-footer-newslatter-wrapper {
   padding-bottom: 80px;
-  margin-bottom: 80px;
   border-bottom: 1px solid #dcc6c9;
 }
 .nio-dia-footer-newslatter-wrapper .nio-dia-section-title span, .nio-dia-footer-newslatter-wrapper .nio-dia-section-title h2, .nio-dia-footer-newslatter-wrapper .nio-dia-section-title p {
@@ -5933,6 +5932,75 @@ select:visited {
   font-size: 24px;
   position: absolute;
   background-color: transparent;
+}
+
+.nio-dia-footer-contact-us-wrapper {
+  padding-bottom: 80px;
+  margin-top: 80px;
+  border-bottom: 1px solid #dcc6c9;
+}
+.nio-dia-footer-contact-us-wrapper .nio-dia-section-title span, .nio-dia-footer-contact-us-wrapper .nio-dia-section-title h2, .nio-dia-footer-contact-us-wrapper .nio-dia-section-title p {
+  color: #fff;
+}
+.nio-dia-footer-contact-us-wrapper .nio-dia-footer-contact-us-form {
+  /*margin-left: 100px;*/
+}
+.nio-dia-footer-contact-us-wrapper .nio-dia-footer-contact-us-form .nio-dia-nw-social {
+  margin-top: 30px;
+}
+.nio-dia-footer-contact-us-wrapper .nio-dia-footer-contact-us-form .nio-dia-nw-social a {
+  color: #fff;
+  margin-left: 15px;
+}
+.nio-dia-footer-contact-us-wrapper .nio-dia-footer-contact-us-form .nio-dia-nw-social a:hover {
+  color: #22bd87;
+}
+.nio-dia-footer-contact-us-wrapper .nio-dia-footer-contact-us-form form {
+  width: 100%;
+  position: relative;
+  display: inline-block;
+}
+.nio-dia-footer-contact-us-wrapper .nio-dia-footer-contact-us-form form input {
+  width: 100%;
+  height: 70px;
+  border: none;
+  border-radius: 8px;
+  padding-left: 20px;
+  background-color: #fff;
+  margin-bottom: 16px;
+}
+
+.nio-dia-footer-contact-us-wrapper .nio-dia-footer-contact-us-form form textarea {
+  width: 100%;
+  height: 70px;
+  border: none;
+  border-radius: 8px;
+  padding: 20px;
+  background-color: #fff;
+  margin-bottom: 16px;
+}
+
+.nio-dia-footer-contact-us-wrapper .nio-dia-footer-contact-us-form form button {
+  padding: 0;
+  right: 20px;
+  border: none;
+  position: absolute;
+  color: #fff;
+  height: 60px;
+  width: 190px;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 60px;
+  display: inline-block;
+  font-family: "Poppins";
+  border-radius: 45px;
+  background-size: 200%, 1px;
+  transition: all 200ms linear 0ms;
+  background-image: linear-gradient(90deg, #9851fe 0%, #13dcfa 50%, #9851fe);
+}
+
+.nio-dia-footer-contact-us-wrapper .nio-dia-banner-btn {
+  position: relative;
 }
 
 .nio-dia-footer-widget-wrapper {
