--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5204,7 +5204,8 @@ select:visited {
 .nio-dia-intro-innerbox {
   color: #fff;
   border-radius: 10px;
-  padding: 90px 70px 60px;
+  margin-bottom: 30px;
+  padding: 40px 40px 40px;
   transition: 500ms all ease;
   background-image: linear-gradient(60deg, #b16fff 0%, #e980ff 100%);
 }
@@ -5387,7 +5388,12 @@ select:visited {
 .nio-dia-skill-progress-bar .skill-set-percent:nth-child(3) .progress {
   background-color: #7a9fef;
 }
-
+.nio-dia-skill-progress-bar .skill-set-percent:nth-child(4) .progress {
+  background-color: #ef9f7a;
+}
+.nio-dia-skill-progress-bar .skill-set-percent:nth-child(5) .progress {
+  background-color: #91bb60;
+}
 /*----------------------------------------------------*/
 /*service area*/
 /*----------------------------------------------------*/
